# core-memory-kit

./: .gitattributes  .gitguardian.yaml  .gitignore  .gitleaks.toml  .markdownlint.json  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HEALTH-CHECKS.md  INSTALL-linux.md  INSTALL-macos.md  INSTALL-windows.md  L-budget  LICENSE  QUICKSTART.md  README.md  RESUME-HERE.md  SECURITY.md  install.ps1  install.sh  osv-scanner.toml  package-lock.json  package.json  sh.exe.stackdump  sonar-project.properties  tsconfig.sonar.json  vitest.config.js
.claude-plugin/: marketplace.json
.github/: dependabot.yml  secret_scanning.yml
context/: DECISIONS.md  MEMORY.md  SOUL.md  settings.json
docs/: BOOTSTRAP.md  CLAUDE-CODE.md  CLI.md  CODEX.md  CURSOR.md  DOCUMENTATION-MAP.md  KIRO.md  MCP.md  OBSIDIAN.md  README.md  RELEASE-PLAN.md  SOURCES.md  SYSTEM-MAP.md  chatgpt links deep-research-report.md
fixtures/: canonicalize-vectors.json
plugin/: README.md
python/: README.md  pyproject.toml
python/cmk_canonicalize/: __init__.py
python/tests/: test_canonicalize.py
scripts/: bench-recall.mjs  bench-storage.mjs  compute-seed-bullet-ids.mjs  extract-session-transcript.mjs  extract-trend.mjs  freeze-canonicalize-ids.mjs  install-matrix-checksum.mjs  install-matrix-compare.mjs  live-test-backend.mjs  live-test.mjs  live-verify-now-roll.mjs  live-verify.mjs  parity-check.mjs  parity-dump-node.mjs  parity-dump-python.py  prepublish-copy-template.mjs  print-release-notes.mjs  release.mjs  stress-test.mjs  supply-chain-report.mjs  sync-plugin-skills.mjs  (+25 more)
(+2610 files in other folders)
